cmake_minimum_required(VERSION 3.8)
project(ros2_mobile_robotics_labs)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)

install(DIRECTORY
  launch
  docs
  results
  media
  DESTINATION share/${PROJECT_NAME}
  OPTIONAL
)

ament_package()
